Smooth modifier does not work in spline curve mode #102060

Closed
opened 2022-10-25 19:51:20 +02:00 by kursad k · 11 comments
Member

System Information
Operating system: Windows 11

Blender Version
Broken: 5d5e0f1b0e

Short description of error

The curve smooth modifier does not work or do anything when it is set to the "apply on spline"

image.png

Exact steps for others to reproduce the error

Load the .blend file

Select the spline and play with the existing modifier, enable disable the curve mode to see the difference.

curve_25102022_1250_55.zip

**System Information** Operating system: Windows 11 **Blender Version** Broken: 5d5e0f1b0ecb **Short description of error** The curve smooth modifier does not work or do anything when it is set to the "apply on spline" ![image.png](https://archive.blender.org/developer/F13768020/image.png) **Exact steps for others to reproduce the error** Load the .blend file Select the spline and play with the existing modifier, enable disable the curve mode to see the difference. [curve_25102022_1250_55.zip](https://archive.blender.org/developer/F13768030/curve_25102022_1250_55.zip)
Author
Member

Added subscriber: @kursadk

Added subscriber: @kursadk
kursad k changed title from Smooth modifier does not do wort in curve mode to Smooth modifier does not work in spline curve mode 2022-10-25 20:14:33 +02:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I can confirm.
This has always been the case (2.78, 3.4).
And I'm a little disorientated by this part of the documentation:
Apply On Spline Points (point surface icon) – Curves, surfaces and texts only

By default, curves, texts and surfaces are always converted to mesh-like geometry before that the modifier stack is evaluated on them.

I think this means: does this option apply mesh modifiers?

I can confirm. This has always been the case (2.78, 3.4). And I'm a little disorientated by this part of the documentation: [Apply On Spline Points (point surface icon) – Curves, surfaces and texts only ](https://docs.blender.org/manual/en/dev/modeling/modifiers/introduction.html#fig-modifiers-panel-layout) > By default, curves, texts and surfaces are always converted to mesh-like geometry before that the modifier stack is evaluated on them. I think this means: does this option apply mesh modifiers?

Added subscriber: @edward88

Added subscriber: @edward88

@mod_moder I think this means the geometry implicitly generated by those objects is used, so with this option enabled it only applies to the control points
But this does not explain why nothing changes at all :/

@mod_moder I think this means the geometry implicitly generated by those objects is used, so with this option enabled it only applies to the control points But this does not explain why nothing changes at all :/

This issue was referenced by ffc0db1994

This issue was referenced by ffc0db199482ecde2f87f3e344475b414bf60e4c
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Smooth modifier works explicitly with mesh edges (thus not able to work on control points without some bigger changes), so assume best thing is to disable the option always, probably something similar to 1a6b51e175 is needed.

`Smooth` modifier works explicitly with mesh edges (thus not able to work on control points without some bigger changes), so assume best thing is to disable the option always, probably something similar to 1a6b51e175 is needed.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2022-11-07 12:27:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102060
No description provided.